settings: login container enters the scene

--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1206,8 +1206,8 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOy-vH-GSs">
-                                <rect key="frame" x="271" y="276" width="59" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOy-vH-GSs">
+                                <rect key="frame" x="271" y="277" width="59" height="31"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="15"/>
                                 <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
@@ -1218,21 +1218,32 @@
                                     <action selector="logoutBtn:" destination="sBa-Qh-DWZ" eventType="touchUpInside" id="Rt8-U2-vab"/>
                                 </connections>
                             </button>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xlw-fM-hrP">
+                                <rect key="frame" x="150" y="326" width="300" height="200"/>
+                                <connections>
+                                    <segue destination="hTE-4z-eGh" kind="embed" id="o6u-hC-UXf"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kxN-pl-ce4" firstAttribute="top" secondItem="CMe-VZ-6Ga" secondAttribute="bottom" constant="40" id="7TA-hw-OA0"/>
-                            <constraint firstItem="kxN-pl-ce4" firstAttribute="centerX" secondItem="cE8-rs-reN" secondAttribute="centerX" id="H5B-PY-yvj"/>
-                            <constraint firstItem="oOy-vH-GSs" firstAttribute="centerX" secondItem="cE8-rs-reN" secondAttribute="centerX" id="N5a-F9-mOh"/>
-                            <constraint firstItem="TSr-eK-5tj" firstAttribute="top" secondItem="kxN-pl-ce4" secondAttribute="bottom" constant="10" id="WKZ-to-NSW"/>
-                            <constraint firstItem="TSr-eK-5tj" firstAttribute="centerX" secondItem="cE8-rs-reN" secondAttribute="centerX" id="aSF-0g-g7y"/>
-                            <constraint firstItem="oOy-vH-GSs" firstAttribute="top" secondItem="TSr-eK-5tj" secondAttribute="bottom" constant="40" id="hZa-K7-MzC"/>
-                            <constraint firstItem="CMe-VZ-6Ga" firstAttribute="top" secondItem="jkl-GR-9wx" secondAttribute="bottom" constant="40" id="rwz-C0-jqJ"/>
-                            <constraint firstItem="CMe-VZ-6Ga" firstAttribute="centerX" secondItem="cE8-rs-reN" secondAttribute="centerX" id="voa-JQ-hvo"/>
+                            <constraint firstItem="xlw-fM-hrP" firstAttribute="leading" secondItem="cE8-rs-reN" secondAttribute="leading" constant="150" id="At8-qu-WtW"/>
+                            <constraint firstItem="TSr-eK-5tj" firstAttribute="top" secondItem="kxN-pl-ce4" secondAttribute="bottom" constant="10" id="E0p-PV-4Sl"/>
+                            <constraint firstItem="kxN-pl-ce4" firstAttribute="centerX" secondItem="TSr-eK-5tj" secondAttribute="centerX" id="E5p-bf-4eY"/>
+                            <constraint firstItem="oOy-vH-GSs" firstAttribute="centerX" secondItem="TSr-eK-5tj" secondAttribute="centerX" id="Fy9-WR-HRV"/>
+                            <constraint firstItem="CMe-VZ-6Ga" firstAttribute="top" secondItem="jkl-GR-9wx" secondAttribute="bottom" constant="40" id="RHT-uf-CND"/>
+                            <constraint firstItem="kxN-pl-ce4" firstAttribute="top" secondItem="CMe-VZ-6Ga" secondAttribute="bottom" constant="40" id="TLa-s3-H3M"/>
+                            <constraint firstItem="xlw-fM-hrP" firstAttribute="top" secondItem="oOy-vH-GSs" secondAttribute="bottom" constant="18" id="VWh-WO-MfJ"/>
+                            <constraint firstItem="oOy-vH-GSs" firstAttribute="centerX" secondItem="xlw-fM-hrP" secondAttribute="centerX" id="Wfp-dM-2LC"/>
+                            <constraint firstItem="7OD-bm-eJJ" firstAttribute="top" secondItem="xlw-fM-hrP" secondAttribute="bottom" constant="25" id="jhQ-LM-tcK"/>
+                            <constraint firstItem="kxN-pl-ce4" firstAttribute="centerX" secondItem="CMe-VZ-6Ga" secondAttribute="centerX" id="m38-iz-tKp"/>
+                            <constraint firstItem="oOy-vH-GSs" firstAttribute="top" secondItem="TSr-eK-5tj" secondAttribute="bottom" constant="40" id="wIy-Qp-P8Z"/>
+                            <constraint firstItem="CMe-VZ-6Ga" firstAttribute="centerX" secondItem="cE8-rs-reN" secondAttribute="centerX" id="xBn-xS-lwe"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xgi-cB-9RK"/>
                     <connections>
+                        <outlet property="containerView" destination="xlw-fM-hrP" id="Ajo-qO-uCK"/>
                         <outlet property="logoutButton" destination="oOy-vH-GSs" id="kUf-hr-kxG"/>
                         <outlet property="pagePromptLabel" destination="CMe-VZ-6Ga" id="TB6-Ti-Fjt"/>
                         <outlet property="passwordSentLabel" destination="TSr-eK-5tj" id="J3W-Vo-jG7"/>
@@ -1398,17 +1409,18 @@
             <point key="canvasLocation" x="357" y="1246"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="hZR-N3-l8c">
+        <scene sceneID="cP7-2T-vnv">
             <objects>
-                <viewController id="k7p-ZO-EFR" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="TTg-7G-qt1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zx8-Hd-Lwf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="hTE-4z-eGh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C93-AP-kBq">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.4039215686" green="0.58823529409999997" blue="0.01176470588" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Imz-el-QU5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="5295" y="445"/>
         </scene>
     </scenes>
     <resources>
